<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UserName"
            android:textSize="22sp"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="22sp"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Emailhint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="22sp"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConfirmPassword"
            android:textSize="22sp"
            android:textColor="@color/purple"/>

        <EditText
            android:id="@+id/Confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword"
            android:minHeight="48dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnReg"
            android:text="@string/Register"
            android:textSize="22sp"
            android:textColor="@color/purple"
            android:background="@color/green"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/alreadyregistered"
            android:text="@string/AlreadyRegistered"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"/>
    </LinearLayout>

</LinearLayout>