<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/UserName"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UsernameHint"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/Password"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:text="@string/Login"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:textSize="18sp"
            android:text="@string/NotRegistered"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text2"
            android:textSize="18sp"
            android:text="@string/ForgotPass"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"/>

    </LinearLayout>


</LinearLayout>